--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "note-taker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "notetaker2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "author": "Bonnie Reed https://github.com/bonniereed",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "uuid": "^8.3.2"
+    }
 }
